--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -41,3 +41,11 @@
 .findItem p {
   margin: 0;
 }
+
+.findItem.overlay img {
+  filter: opacity(0.5) drop-shadow(0 0 0 white);
+}
+
+.findItem.overlay p {
+  color: rgba(255, 255, 255, .5);
+}
