added winning game ability with frontend

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,3 +19,43 @@ body {
   height: auto;
   cursor: crosshair;
 }
+
+.start__popup {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .9);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.start__popup-content {
+  border-radius: 15px;
+  width: 500px;
+  padding: 30px;
+  text-align: center;
+  background-color: #fff;
+}
+
+.start__popup-text {
+  font-size: 2rem;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.start__popup-btn {
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 5px 15px;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.start__popup-btn:hover {
+  background-color: #ecf0f1;
+}
