--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   margin: 0;
   background-color: #2d3436;
+  color: #fff;
 }
 
 .game-field {
@@ -23,14 +24,18 @@ body {
 .start__popup {
   position: fixed;
   left: 0;
-  top: 0;
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, .9);
+  color: #000;
   z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.start__popup.again {
+  top: 0 !important;
 }
 
 .start__popup-content {
@@ -58,4 +63,9 @@ body {
 
 .start__popup-btn:hover {
   background-color: #ecf0f1;
+}
+
+.link {
+  color: #fff;
+  text-decoration: none;
 }
